# geojson-crud

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env_file.txt  pyproject.toml  requirements.prod.txt  requirements.txt
alembic/: env.py
alembic/versions/: 3fda7dd49637_geojson_data_storage.py  87f1757ced27_geojson_data_storage.py  c65208f75e04_added_index_for_parent_id_foreign_key_.py
app/: main.py
app/api/: geojson.py
app/models/: __init__.py  geojson.py  utils.py
app/routers/: __init__.py  geojson.py
app/schemas/: geojson.py  pagination.py
geojson_examples/: feature_collection.json  terra_de_mejo.json
tests/: conftest.py  test_geojson_crud.py
